--- a/index.html
+++ b/index.html
@@ -37,28 +37,9 @@
     </header>
     <main>
         
-        <div class="todos">
-            <div class="pokemon-todos">
-                <div class="pokemon">
-                    <p class="pokemon-id-back">#001</p>
-                    <div class="pokemon-imagen">
-                        <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/official-artwork/25.png" alt="Pikachu">
-                    </div>
-                    <div class="pokemon-info">
-                        <div class="nombre-contenedor">
-                            <p class="pokemon-id">#001</p>
-                            <h2 class="pokemon-nombre">Pikachu</h2>
-                        </div>
-                    </div>
-                    <div class="pokemon-tipos">
-                        <p class = "electric tipo">ELECTRIC</p>
-                        <p class = "fighting tipo">FIGHTING</p>
-                    </div>
-                    <div class="pokemon-stats">
-                        <p class="stat">1.2m</p>
-                        <p class = "stat">50kg</p>
-                    </div>
-                </div>
+        <div id="todos">
+            <div class="pokemon-todos" id="listaPokemon">
+
             </div>
         </div>
 
